--- a/index.html
+++ b/index.html
@@ -38,24 +38,29 @@
       <div id="blank"></div>
       <figure id="image">
         <img
-          src="https://dummyimage.com/1000x600/000/fff"
+          src="https://dummyimage.com/1600x900/000/fff"
           id="wide-image"
           alt=""
         />
         <img
-          src="https://dummyimage.com/800x600/000/fff"
+          src="https://dummyimage.com/900x600/000/fff"
           id="medium-image"
           alt=""
         />
         <img
-          src="https://dummyimage.com/600x800/000/fff"
+          src="https://dummyimage.com/500x600/000/fff"
           id="narrow-image"
           alt=""
         />
       </figure>
       <div id="menu">menu</div>
       <div id="subscribe">subscribe</div>
-      <div id="main">main</div>
+      <div id="main">
+        <div id="content1">1</div>
+        <div id="content2">2</div>
+        <div id="content3">3</div>
+        <div id="content4">4</div>
+      </div>
       <div id="footer">footer</div>
     </div>
     <script src="script.js"></script>
