--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Assignment 3</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="style.css" />
     <!-- prettier-ignore -->
     <link 
@@ -38,7 +39,7 @@
       <div id="blank"></div>
       <figure id="image">
         <img
-          src="https://dummyimage.com/1600x900/000/fff"
+          src="https://dummyimage.com/1800x900/000/fff"
           id="wide-image"
           alt=""
         />
@@ -48,10 +49,16 @@
           alt=""
         />
         <img
-          src="https://dummyimage.com/500x600/000/fff"
+          src="https://dummyimage.com/600x600/000/fff"
           id="narrow-image"
           alt=""
         />
+        <figcaption class="caption" id="shortcap">
+          Short caption
+        </figcaption>
+        <p class="caption" id="longcap">
+          Long caption goes here, I use arch btw
+        </p>
       </figure>
       <div id="menu">menu</div>
       <div id="subscribe">subscribe</div>
