add navbar for wide screen

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Assignment 3</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <!-- prettier-ignore -->
     <link 
@@ -34,7 +34,30 @@
     </video>
     <div id="grid-container">
       <div id="logo">logo</div>
-      <div id="nav">nav</div>
+      <nav>
+        <ul>
+          <li>
+            <div class="nav-icon"><img src="resources/email.png" alt="" /></div>
+            <div class="nav-text">Home</div>
+          </li>
+          <li>
+            <div class="nav-icon"><img src="resources/email.png" alt="" /></div>
+            <div class="nav-text">Explore</div>
+          </li>
+          <li>
+            <div class="nav-icon"><img src="resources/email.png" alt="" /></div>
+            <div class="nav-text">News</div>
+          </li>
+          <li>
+            <div class="nav-icon"><img src="resources/email.png" alt="" /></div>
+            <div class="nav-text">Blog</div>
+          </li>
+          <li>
+            <div class="nav-icon"><img src="resources/email.png" alt="" /></div>
+            <div class="nav-text">About</div>
+          </li>
+        </ul>
+      </nav>
       <div id="social">social</div>
       <div id="blank"></div>
       <figure id="image">
@@ -53,9 +76,7 @@
           id="narrow-image"
           alt=""
         />
-        <figcaption class="caption" id="shortcap">
-          Short caption
-        </figcaption>
+        <figcaption class="caption" id="shortcap">Short caption</figcaption>
         <p class="caption" id="longcap">
           Long caption goes here, I use arch btw
         </p>
