--- a/index.html
+++ b/index.html
@@ -61,21 +61,7 @@
       <div id="social">social</div>
       <div id="blank"></div>
       <figure id="image">
-        <img
-          src="https://dummyimage.com/1800x900/000/fff"
-          id="wide-image"
-          alt=""
-        />
-        <img
-          src="https://dummyimage.com/900x600/000/fff"
-          id="medium-image"
-          alt=""
-        />
-        <img
-          src="https://dummyimage.com/600x500/000/fff"
-          id="narrow-image"
-          alt=""
-        />
+        <img src="https://dummyimage.com/900x600/000/fff" alt="" />
         <figcaption class="caption" id="shortcap">Short caption</figcaption>
         <p class="caption" id="longcap">
           Long caption goes here, I use arch btw
