fix wide image sizing

--- a/index.html
+++ b/index.html
@@ -33,35 +33,47 @@
       <source src="resources/video.mp4" type="video/mp4" />
     </video>
     <div id="grid-container">
-      <div id="logo">logo</div>
-      <nav>
-        <ul>
-          <li>
-            <div class="nav-icon"><img src="resources/email.png" alt="" /></div>
-            <div class="nav-text">Home</div>
-          </li>
-          <li>
-            <div class="nav-icon"><img src="resources/email.png" alt="" /></div>
-            <div class="nav-text">Explore</div>
-          </li>
-          <li>
-            <div class="nav-icon"><img src="resources/email.png" alt="" /></div>
-            <div class="nav-text">News</div>
-          </li>
-          <li>
-            <div class="nav-icon"><img src="resources/email.png" alt="" /></div>
-            <div class="nav-text">Blog</div>
-          </li>
-          <li>
-            <div class="nav-icon"><img src="resources/email.png" alt="" /></div>
-            <div class="nav-text">About</div>
-          </li>
-        </ul>
-      </nav>
+      <header>
+        <div id="logo">logo</div>
+        <nav>
+          <ul>
+            <li>
+              <div class="nav-icon">
+                <img src="resources/email.png" alt="" />
+              </div>
+              <div class="nav-text">Home</div>
+            </li>
+            <li>
+              <div class="nav-icon">
+                <img src="resources/email.png" alt="" />
+              </div>
+              <div class="nav-text">Explore</div>
+            </li>
+            <li>
+              <div class="nav-icon">
+                <img src="resources/email.png" alt="" />
+              </div>
+              <div class="nav-text">News</div>
+            </li>
+            <li>
+              <div class="nav-icon">
+                <img src="resources/email.png" alt="" />
+              </div>
+              <div class="nav-text">Blog</div>
+            </li>
+            <li>
+              <div class="nav-icon">
+                <img src="resources/email.png" alt="" />
+              </div>
+              <div class="nav-text">About</div>
+            </li>
+          </ul>
+        </nav>
+      </header>
       <div id="social">social</div>
       <div id="blank"></div>
       <figure id="image">
-        <img src="https://dummyimage.com/900x600/000/fff" alt="" />
+        <img src="https://dummyimage.com/1200x600/000/fff" alt="" />
         <figcaption class="caption" id="shortcap">Short caption</figcaption>
         <p class="caption" id="longcap">
           Long caption goes here, I use arch btw
