rename social -> aside

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </ul>
         </nav>
       </header>
-      <div id="social">social</div>
+      <aside>aside</aside>
       <div id="blank"></div>
       <figure id="image">
         <img src="https://dummyimage.com/1200x600/000/fff" alt="" />
