add dynamic margin

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <source src="resources/video.mp4" type="video/mp4" />
     </video>
     <div id="grid-container">
+      <div id="left-margin"></div>
+      <div id="right-margin"></div>
       <header>
         <div id="logo">logo</div>
         <nav>
@@ -73,7 +75,7 @@
       <aside>aside</aside>
       <div id="blank"></div>
       <figure id="image">
-        <img src="https://dummyimage.com/1200x600/000/fff" alt="" />
+        <img src="https://dummyimage.com/1000x600/000/fff" alt="" />
         <figcaption class="caption" id="shortcap">Short caption</figcaption>
         <p class="caption" id="longcap">
           Long caption goes here, I use arch btw
