add navbar for medium-layout

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
   </head>
   <body>
     <video id="video">
-      <source src="resources/video.mp4" type="video/mp4" />
+      <source src="resorces/video.mp4" type="video/mp4" />
     </video>
     <div id="grid-container">
-      <div id="left-margin"></div>
-      <div id="right-margin"></div>
+      <div class="margin" id="left-margin"></div>
+      <div class="margin" id="right-margin"></div>
       <header>
-        <div id="logo">logo</div>
+        <div id="logo"></div>
         <nav>
           <ul>
             <li>
@@ -62,12 +62,6 @@
                 <img src="resources/email.png" alt="" />
               </div>
               <div class="nav-text">Blog</div>
-            </li>
-            <li>
-              <div class="nav-icon">
-                <img src="resources/email.png" alt="" />
-              </div>
-              <div class="nav-text">About</div>
             </li>
           </ul>
         </nav>
