--- a/index.html
+++ b/index.html
@@ -40,28 +40,38 @@
         <nav>
           <ul>
             <li>
-              <div class="nav-icon">
+              <a class="nav-icon" href="https://archlinux.org/">
+                <!-- <a class="nav-icon" href="https://archlinux.org/"> -->
                 <img src="resources/email.png" alt="" />
-              </div>
-              <div class="nav-text">Home</div>
+                <!-- </div> -->
+              </a>
+              <a href="https://archlinux.org/">
+                <div class="nav-text">Home</div>
+              </a>
             </li>
             <li>
-              <div class="nav-icon">
+              <a class="nav-icon" href="https://archlinux.org/">
                 <img src="resources/email.png" alt="" />
-              </div>
-              <div class="nav-text">Explore</div>
+              </a>
+              <a href="https://archlinux.org/">
+                <div class="nav-text">News</div>
+              </a>
             </li>
             <li>
-              <div class="nav-icon">
+              <a class="nav-icon" href="https://archlinux.org/">
                 <img src="resources/email.png" alt="" />
-              </div>
-              <div class="nav-text">News</div>
+              </a>
+              <a href="https://archlinux.org/">
+                <div class="nav-text">Blog</div>
+              </a>
             </li>
             <li>
-              <div class="nav-icon">
+              <a class="nav-icon" href="https://archlinux.org/">
                 <img src="resources/email.png" alt="" />
-              </div>
-              <div class="nav-text">Blog</div>
+              </a>
+              <a href="https://archlinux.org/">
+                <div class="nav-text">About</div>
+              </a>
             </li>
           </ul>
         </nav>
