add navbar for narrow screen
also fix various other stuff

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
       <div class="margin" id="left-margin"></div>
       <div class="margin" id="right-margin"></div>
       <header>
+        <div class="logo-margin" id="logo-margin-l"></div>
         <div id="logo"></div>
+        <div class="logo-margin" id="logo-margin-l"></div>
         <nav>
           <ul>
             <li>
