--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="margin" id="right-margin"></div>
       <header>
         <div class="logo-margin" id="logo-margin-l"></div>
-        <div id="logo"></div>
+        <div id="logo" class="center-text">LOGO</div>
         <div class="logo-margin" id="logo-margin-l"></div>
         <nav>
           <ul>
@@ -87,7 +87,28 @@
           Long caption goes here, I use arch btw
         </p>
       </figure>
-      <div id="menu">menu</div>
+      <div id="menu">
+        <div class="menu-item center-text">
+          <a href="https://archlinux.org/">
+            <div class="nav-text">Home</div>
+          </a>
+        </div>
+        <div class="menu-item center-text">
+          <a href="https://archlinux.org/">
+            <div class="nav-text">News</div>
+          </a>
+        </div>
+        <div class="menu-item center-text">
+          <a href="https://archlinux.org/">
+            <div class="nav-text">Blog</div>
+          </a>
+        </div>
+        <div class="menu-item center-text">
+          <a href="https://archlinux.org/">
+            <div class="nav-text">About</div>
+          </a>
+        </div>
+      </div>
       <div id="subscribe">subscribe</div>
       <div id="main">
         <div id="content1">1</div>
