--- a/index.html
+++ b/index.html
@@ -78,7 +78,21 @@
           </ul>
         </nav>
       </header>
-      <aside>aside</aside>
+      <aside>
+        <p>
+          Welcome to Freddy Fazbear's Pizza. A magical place for kids and
+          grown-ups alike, where fantasy and fun come to life.
+        </p>
+        <h1>!!!WARNING!!!</h1>
+        <h3>Our website does not support screen width above 1600px.</h3>
+        <h5>
+          Fazbear Entertainment is not responsible for damage to property or
+          person if you use an unsupported screen resolution. Upon discovering
+          that damage or death has occurred, a missing person report will be
+          filed within 90 days, or as soon property and premises have been
+          thoroughly cleaned and bleached, and the carpets have been replaced.
+        </h5>
+      </aside>
       <div id="blank"></div>
       <figure id="image">
         <img src="https://dummyimage.com/1000x600/000/fff" alt="" />
