--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
           Welcome to Freddy Fazbear's Pizza. A magical place for kids and
           grown-ups alike, where fantasy and fun come to life.
         </p>
-        <h1>!!!WARNING!!!</h1>
-        <h3>Our website does not support screen width above 1600px.</h3>
+        <h1 class="flashing">!!!WARNING!!!</h1>
+        <h3 class="flashing">
+          Our website does not support screen width above 1600px.
+        </h3>
         <h5>
           Fazbear Entertainment is not responsible for damage to property or
           person if you use an unsupported screen resolution. Upon discovering
