--- a/index.html
+++ b/index.html
@@ -125,7 +125,17 @@
           </a>
         </div>
       </div>
-      <div id="subscribe">subscribe</div>
+      <div id="subscribe">
+        <img src="resources/email.png" alt="" />
+        <p>
+          Sign up for our newsletter to receive a handpicked selection of the
+          best stories, recipes, and news, delivered weekly to your inbox.
+        </p>
+        <form>
+          <input type="text" placeholder="Email" label="email" />
+          <input type="button" value="subscribe" label="subscribe" />
+        </form>
+      </div>
       <div id="main">
         <div id="content1">1</div>
         <div id="content2">2</div>
