--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
       <div class="margin" id="right-margin"></div>
       <header>
         <div class="logo-margin" id="logo-margin-l"></div>
-        <div id="logo" class="center-text">LOGO</div>
-        <div class="logo-margin" id="logo-margin-l"></div>
+        <div id="logo-container center-text">
+          <img id="logo" src="resources/pizza.png" alt="logo" />
+        </div>
+        <div class="logo-margin" id="logo-margin-r"></div>
         <nav>
           <ul>
             <li>
