--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
               </a>
             </li>
           </ul>
+          <div id="nav-margin"></div>
         </nav>
       </header>
       <aside>
