--- a/index.html
+++ b/index.html
@@ -42,42 +42,24 @@
         </div>
         <div class="logo-margin" id="logo-margin-r"></div>
         <nav>
-          <ul>
-            <li>
-              <a class="nav-icon" href="https://archlinux.org/">
-                <!-- <a class="nav-icon" href="https://archlinux.org/"> -->
-                <img src="resources/email.png" alt="" />
-                <!-- </div> -->
-              </a>
-              <a href="https://archlinux.org/">
-                <div class="nav-text">Home</div>
-              </a>
-            </li>
-            <li>
-              <a class="nav-icon" href="https://archlinux.org/">
-                <img src="resources/email.png" alt="" />
-              </a>
-              <a href="https://archlinux.org/">
-                <div class="nav-text">News</div>
-              </a>
-            </li>
-            <li>
-              <a class="nav-icon" href="https://archlinux.org/">
-                <img src="resources/email.png" alt="" />
-              </a>
-              <a href="https://archlinux.org/">
-                <div class="nav-text">Blog</div>
-              </a>
-            </li>
-            <li>
-              <a class="nav-icon" href="https://archlinux.org/">
-                <img src="resources/email.png" alt="" />
-              </a>
-              <a href="https://archlinux.org/">
-                <div class="nav-text">About</div>
-              </a>
-            </li>
-          </ul>
+          <div id="nav-container">
+            <a href="https://archlinux.org/">
+              <img class="nav-icon" src="resources/email.png" alt="" />
+              <div class="nav-text">Home</div>
+            </a>
+            <a href="https://archlinux.org/">
+              <img class="nav-icon" src="resources/email.png" alt="" />
+              <div class="nav-text">Menu</div>
+            </a>
+            <a href="https://archlinux.org/">
+              <img class="nav-icon" src="resources/email.png" alt="" />
+              <div class="nav-text">Career</div>
+            </a>
+            <a href="https://archlinux.org/">
+              <img class="nav-icon" src="resources/email.png" alt="" />
+              <div class="nav-text">About</div>
+            </a>
+          </div>
           <div id="nav-margin"></div>
         </nav>
       </header>
