add real caption

--- a/index.html
+++ b/index.html
@@ -83,9 +83,12 @@
       <div id="blank"></div>
       <figure id="image">
         <img src="https://dummyimage.com/1000x600/000/fff" alt="" />
-        <figcaption class="caption" id="shortcap">Short caption</figcaption>
+        <figcaption class="caption" id="shortcap">
+          Freddy Fazbear's Pizza
+        </figcaption>
         <p class="caption" id="longcap">
-          Long caption goes here, I use arch btw
+          A magical place for kids and grown-ups alike, where fantasy and fun
+          come to life.
         </p>
       </figure>
       <div id="menu">
