add real subscribe

--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
       <div id="subscribe">
         <img src="resources/email.png" alt="" />
         <p>
-          Sign up for our newsletter to receive a handpicked selection of the
-          best stories, recipes, and news, delivered weekly to your inbox.
+          Sign up for our newsletter to get updated on location openings, menu
+          changes, and promotions.
         </p>
         <form>
           <input type="text" placeholder="Email" label="email" />
-          <input type="button" value="subscribe" label="subscribe" />
+          <input type="button" value="Subscribe" label="subscribe" />
         </form>
       </div>
       <div id="main">
