fix validation errors

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="margin" id="right-margin"></div>
       <header>
         <div class="logo-margin" id="logo-margin-l"></div>
-        <div id="logo-container center-text">
+        <div id="logo-container">
           <img id="logo" src="resources/pizza.png" alt="logo" />
         </div>
         <div class="logo-margin" id="logo-margin-r"></div>
@@ -83,13 +83,13 @@
       <div id="blank"></div>
       <figure id="image">
         <img src="https://dummyimage.com/1000x600/000/fff" alt="" />
-        <figcaption class="caption" id="shortcap">
-          Freddy Fazbear's Pizza
+        <figcaption>
+          <p class="caption" id="shortcap">Freddy Fazbear's Pizza</p>
+          <p class="caption" id="longcap">
+            A magical place for kids and grown-ups alike, where fantasy and fun
+            come to life.
+          </p>
         </figcaption>
-        <p class="caption" id="longcap">
-          A magical place for kids and grown-ups alike, where fantasy and fun
-          come to life.
-        </p>
       </figure>
       <div id="menu">
         <div class="menu-item center-text">
@@ -120,8 +120,8 @@
           changes, and promotions.
         </p>
         <form>
-          <input type="text" placeholder="Email" label="email" />
-          <input type="button" value="Subscribe" label="subscribe" />
+          <input type="text" placeholder="Email" />
+          <input type="button" value="Subscribe" />
         </form>
       </div>
       <div id="main">
