add internal margins

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
           </a>
         </div>
       </div>
+      <div class="subscribe-margin" id="subscribe-margin-top"></div>
       <div id="subscribe">
         <img src="resources/email.png" alt="" />
         <p>
@@ -124,6 +125,7 @@
           <input type="button" value="Subscribe" />
         </form>
       </div>
+      <div class="subscribe-margin" id="subscribe-margin-bottom"></div>
       <div id="main">
         <div id="content1">1</div>
         <div id="content2">2</div>
