--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </a>
             <a href="https://archlinux.org/">
               <img class="nav-icon" src="resources/email.png" alt="" />
-              <div class="nav-text">Career</div>
+              <div class="nav-text">Delivery</div>
             </a>
             <a href="https://archlinux.org/">
               <img class="nav-icon" src="resources/email.png" alt="" />
@@ -82,7 +82,7 @@
       </aside>
       <div id="blank"></div>
       <figure id="image">
-        <img src="https://dummyimage.com/1000x600/000/fff" alt="" />
+        <img src="resources/banner.webp" alt="" />
         <figcaption>
           <p class="caption" id="shortcap">Freddy Fazbear's Pizza</p>
           <p class="caption" id="longcap">
@@ -94,22 +94,22 @@
       <div id="menu">
         <div class="menu-item center-text">
           <a href="https://archlinux.org/">
-            <div class="nav-text">Home</div>
+            <div>Home</div>
           </a>
         </div>
         <div class="menu-item center-text">
           <a href="https://archlinux.org/">
-            <div class="nav-text">News</div>
+            <div>Menu</div>
           </a>
         </div>
         <div class="menu-item center-text">
           <a href="https://archlinux.org/">
-            <div class="nav-text">Blog</div>
+            <div>Delivery</div>
           </a>
         </div>
         <div class="menu-item center-text">
           <a href="https://archlinux.org/">
-            <div class="nav-text">About</div>
+            <div>About</div>
           </a>
         </div>
       </div>
