add image credit

--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
           <div id="nav-container">
             <a href="https://archlinux.org/">
               <img class="nav-icon" src="resources/email.png" alt="" />
-              <div class="nav-text">Home</div>
+              <div>Home</div>
             </a>
             <a href="https://archlinux.org/">
               <img class="nav-icon" src="resources/email.png" alt="" />
-              <div class="nav-text">Menu</div>
+              <div>Menu</div>
             </a>
             <a href="https://archlinux.org/">
               <img class="nav-icon" src="resources/email.png" alt="" />
-              <div class="nav-text">Delivery</div>
+              <div>Delivery</div>
             </a>
             <a href="https://archlinux.org/">
               <img class="nav-icon" src="resources/email.png" alt="" />
-              <div class="nav-text">About</div>
+              <div>About</div>
             </a>
           </div>
           <div id="nav-margin"></div>
@@ -89,6 +89,7 @@
             A magical place for kids and grown-ups alike, where fantasy and fun
             come to life.
           </p>
+          <p class="caption" id="inline-credit">image credit: unknown</p>
         </figcaption>
       </figure>
       <div id="menu">
@@ -113,7 +114,9 @@
           </a>
         </div>
       </div>
-      <div class="subscribe-margin" id="subscribe-margin-top"></div>
+      <div class="subscribe-margin" id="subscribe-margin-top">
+        <p class="credit" id="block-credit">*image credit: unknown</p>
+      </div>
       <div id="subscribe">
         <img src="resources/email.png" alt="" />
         <p>
