--- a/index.html
+++ b/index.html
@@ -135,7 +135,24 @@
         <div id="content3">3</div>
         <div id="content4">4</div>
       </div>
-      <div id="footer">footer</div>
+      <footer>
+        <div id="footer-margin-top"></div>
+        <div class="center-text" id="legal">
+          <p>
+            <a href="https://archlinux.org/">Privacy Policy</a> |
+            <a href="https://archlinux.org/">Terms of Use</a> |
+            <a href="https://archlinux.org/">Contact</a>
+            <br />
+            © Fazbear Entertainment, all rights reserved
+          </p>
+        </div>
+        <div id="social-media">
+          <img class="social-icon" src="resources/x.png" alt="" />
+          <img class="social-icon" src="resources/fb.png" alt="" />
+          <img class="social-icon" src="resources/map.png" alt="" />
+        </div>
+        <div id="footer-margin-bottom"></div>
+      </footer>
     </div>
     <script src="script.js"></script>
   </body>
