anchor image credit

--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
             A magical place for kids and grown-ups alike, where fantasy and fun
             come to life.
           </p>
-          <p class="caption" id="inline-credit">image credit: unknown</p>
+          <p class="caption" id="inline-credit">
+            image credit: <a href="https://archlinux.org/">unknown</a>
+          </p>
         </figcaption>
       </figure>
       <div id="menu">
@@ -115,7 +117,9 @@
         </div>
       </div>
       <div class="subscribe-margin" id="subscribe-margin-top">
-        <p class="credit" id="block-credit">*image credit: unknown</p>
+        <p class="credit" id="block-credit">
+          *image credit: <a href="https://archlinux.org/">unknown</a>
+        </p>
       </div>
       <div id="subscribe">
         <img src="resources/email.png" alt="" />
