add real nav icons

--- a/index.html
+++ b/index.html
@@ -44,19 +44,35 @@
         <nav>
           <div id="nav-container">
             <a href="https://archlinux.org/">
-              <img class="nav-icon" src="resources/email.png" alt="" />
+              <box-icon
+                class="nav-icon"
+                name="home-smile"
+                animation="tada-hover"
+              ></box-icon>
               <div>Home</div>
             </a>
             <a href="https://archlinux.org/">
-              <img class="nav-icon" src="resources/email.png" alt="" />
+              <box-icon
+                class="nav-icon"
+                name="food-menu"
+                animation="tada-hover"
+              ></box-icon>
               <div>Menu</div>
             </a>
             <a href="https://archlinux.org/">
-              <img class="nav-icon" src="resources/email.png" alt="" />
+              <box-icon
+                class="nav-icon"
+                name="package"
+                animation="tada-hover"
+              ></box-icon>
               <div>Delivery</div>
             </a>
             <a href="https://archlinux.org/">
-              <img class="nav-icon" src="resources/email.png" alt="" />
+              <box-icon
+                class="nav-icon"
+                name="info-circle"
+                animation="tada-hover"
+              ></box-icon>
               <div>About</div>
             </a>
           </div>
@@ -161,5 +177,6 @@
       </footer>
     </div>
     <script src="script.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
   </body>
 </html>
