use boxicon for footer

--- a/index.html
+++ b/index.html
@@ -169,9 +169,24 @@
           </p>
         </div>
         <div id="social-media">
-          <img class="social-icon" src="resources/x.png" alt="" />
-          <img class="social-icon" src="resources/fb.png" alt="" />
-          <img class="social-icon" src="resources/map.png" alt="" />
+          <box-icon
+            type="logo"
+            class="social-icon"
+            name="facebook"
+            animation="tada-hover"
+          ></box-icon>
+          <box-icon
+            type="logo"
+            class="social-icon"
+            name="twitter"
+            animation="tada-hover"
+          ></box-icon>
+          <box-icon
+            type="solid"
+            name="map"
+            class="social-icon"
+            animation="tada-hover"
+          ></box-icon>
         </div>
         <div id="footer-margin-bottom"></div>
       </footer>
