--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </p>
       </div>
       <div id="subscribe">
-        <img src="resources/email.png" alt="" />
+        <img src="resources/mail.png" alt="" />
         <p>
           Sign up for our newsletter to get updated on location openings, menu
           changes, and promotions.
