--- a/index.html
+++ b/index.html
@@ -150,10 +150,47 @@
       </div>
       <div class="subscribe-margin" id="subscribe-margin-bottom"></div>
       <div id="main">
-        <div id="content1">1</div>
-        <div id="content2">2</div>
-        <div id="content3">3</div>
-        <div id="content4">4</div>
+        <div class="content">
+          <img src="resources/bonnie.webp" alt="Bonnie" />
+          <h3>Bonnie</h3>
+          <p>
+            Bonnie is an animatronic rabbit and the guitarist in Freddy's band,
+            positioned at the left side of the stage. He has a personality based
+            on a rock musician; boastful, prideful, with the speech pattern of a
+            laid back hippie stereotype.
+          </p>
+        </div>
+        <div class="content">
+          <img src="resources/freddy.webp" alt="Freddy" />
+          <h3>Freddy</h3>
+          <p>
+            Freddy is a brown animatronic bear and lead singer of the band,
+            standing in the center of the stage. He enjoys having fun and being
+            laid-back, easygoing, happy-go-lucky, despite coming off as a
+            threatening and scary big brown bear.
+          </p>
+        </div>
+
+        <div class="content">
+          <img src="resources/chica.webp" alt="Chica" />
+          <h3>Chica</h3>
+          <p>
+            Chica is an animatronic chicken and the backup singer in Freddy's
+            band, positioned at the right side of the stage. She is a pushy,
+            gluttonous but lovable singing animatronic bot who has love for
+            food, especially pizza.
+          </p>
+        </div>
+        <div class="content">
+          <img src="resources/foxy.webp" alt="Foxy" />
+          <h3>Foxy</h3>
+          <p>
+            Foxy is a discontinued animatronic pirate fox entertainer. He
+            resides at his own separate stage in the pizzeria. His personality
+            is that of a stereotypical pirate, often speaking in pirate slang,
+            all with a pirate accent.
+          </p>
+        </div>
       </div>
       <footer>
         <div id="footer-margin-top"></div>
