--- a/index.html
+++ b/index.html
@@ -100,11 +100,13 @@
       <figure id="image">
         <img src="resources/banner.webp" alt="" />
         <figcaption>
-          <p class="caption" id="shortcap">Freddy Fazbear's Pizza</p>
-          <p class="caption" id="longcap">
+          <a class="caption" id="shortcap" href="https://archlinux.org/"
+            >Freddy Fazbear's Pizza</a
+          >
+          <a class="caption" id="longcap" href="https://archlinux.org/">
             A magical place for kids and grown-ups alike, where fantasy and fun
             come to life.
-          </p>
+          </a>
           <p class="caption" id="inline-credit">
             image credit: <a href="https://archlinux.org/">unknown</a>
           </p>
