--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="logo-margin" id="logo-margin-r"></div>
         <nav>
           <div id="nav-container">
-            <a href="https://archlinux.org/">
+            <a href="#">
               <box-icon
                 class="nav-icon"
                 name="home-smile"
@@ -51,7 +51,7 @@
               ></box-icon>
               <div>Home</div>
             </a>
-            <a href="https://archlinux.org/">
+            <a href="#">
               <box-icon
                 class="nav-icon"
                 name="food-menu"
@@ -59,7 +59,7 @@
               ></box-icon>
               <div>Menu</div>
             </a>
-            <a href="https://archlinux.org/">
+            <a href="#">
               <box-icon
                 class="nav-icon"
                 name="package"
@@ -67,7 +67,7 @@
               ></box-icon>
               <div>Delivery</div>
             </a>
-            <a href="https://archlinux.org/">
+            <a href="#">
               <box-icon
                 class="nav-icon"
                 name="info-circle"
@@ -100,43 +100,41 @@
       <figure id="image">
         <img src="resources/banner.webp" alt="" />
         <figcaption>
-          <a class="caption" id="shortcap" href="https://archlinux.org/"
-            >Freddy Fazbear's Pizza</a
-          >
-          <a class="caption" id="longcap" href="https://archlinux.org/">
+          <a class="caption" id="shortcap" href="#">Freddy Fazbear's Pizza</a>
+          <a class="caption" id="longcap" href="#">
             A magical place for kids and grown-ups alike, where fantasy and fun
             come to life.
           </a>
           <p class="caption" id="inline-credit">
-            image credit: <a href="https://archlinux.org/">unknown</a>
+            image credit: <a href="#">unknown</a>
           </p>
         </figcaption>
       </figure>
       <div id="menu">
         <div class="menu-item center-text">
-          <a href="https://archlinux.org/">
+          <a href="#">
             <div>Home</div>
           </a>
         </div>
         <div class="menu-item center-text">
-          <a href="https://archlinux.org/">
+          <a href="#">
             <div>Menu</div>
           </a>
         </div>
         <div class="menu-item center-text">
-          <a href="https://archlinux.org/">
+          <a href="#">
             <div>Delivery</div>
           </a>
         </div>
         <div class="menu-item center-text">
-          <a href="https://archlinux.org/">
+          <a href="#">
             <div>About</div>
           </a>
         </div>
       </div>
       <div class="subscribe-margin" id="subscribe-margin-top">
         <p class="credit" id="block-credit">
-          *image credit: <a href="https://archlinux.org/">unknown</a>
+          *image credit: <a href="#">unknown</a>
         </p>
       </div>
       <div id="subscribe">
@@ -198,32 +196,37 @@
         <div id="footer-margin-top"></div>
         <div class="center-text" id="legal">
           <p>
-            <a href="https://archlinux.org/">Privacy Policy</a> |
-            <a href="https://archlinux.org/">Terms of Use</a> |
-            <a href="https://archlinux.org/">Contact</a>
+            <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a> |
+            <a href="#">Contact</a>
             <br />
             © Fazbear Entertainment, all rights reserved
           </p>
         </div>
         <div id="social-media">
-          <box-icon
-            type="logo"
-            class="social-icon"
-            name="facebook"
-            animation="tada-hover"
-          ></box-icon>
-          <box-icon
-            type="logo"
-            class="social-icon"
-            name="twitter"
-            animation="tada-hover"
-          ></box-icon>
-          <box-icon
-            type="solid"
-            name="map"
-            class="social-icon"
-            animation="tada-hover"
-          ></box-icon>
+          <a href="#">
+            <box-icon
+              type="logo"
+              class="social-icon"
+              name="facebook"
+              animation="tada-hover"
+            ></box-icon>
+          </a>
+          <a href="#">
+            <box-icon
+              type="logo"
+              class="social-icon"
+              name="twitter"
+              animation="tada-hover"
+            ></box-icon>
+          </a>
+          <a href="#">
+            <box-icon
+              type="solid"
+              name="map"
+              class="social-icon"
+              animation="tada-hover"
+            ></box-icon>
+          </a>
         </div>
         <div id="footer-margin-bottom"></div>
       </footer>
