crash browser when jumpscared

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <video id="video">
-      <source src="resources/video.mp4" type="video/mp4" />
+      <source src="resources/jumpscare.mp4" type="video/mp4" />
     </video>
     <div id="grid-container">
       <div class="margin" id="left-margin"></div>
