scale aside to width

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <video id="video">
         <source src="resources/jumpscare.mp4" type="video/mp4" />
       </video>
-      <h1 id="warning" class="creepster-regular">UNSUPPORTED RESOLUTION</h1>
+      <h1 id="warning" class="creepster-regular">UNSUPPORTED RESOLUTION!</h1>
     </div>
     <div id="grid-container">
       <div class="margin" id="left-margin"></div>
@@ -90,7 +90,7 @@
           Welcome to Freddy Fazbear's Pizza. A magical place for kids and
           grown-ups alike, where fantasy and fun come to life.
         </p>
-        <h1 class="flashing">!!!WARNING!!!</h1>
+        <h1 class="flashing">WARNING!</h1>
         <h3 class="flashing">
           Our website does not support screen width above 1600px.
         </h3>
