fix validation error

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           Welcome to Freddy Fazbear's Pizza. A magical place for kids and
           grown-ups alike, where fantasy and fun come to life.
         </p>
-        <h1 class="flashing">WARNING!</h1>
+        <h2 class="flashing">!!! WARNING !!!</h2>
         <h3 class="flashing">
           Our website does not support screen width above 1600px.
         </h3>
