fix credit underline when hover

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             A magical place for kids and grown-ups alike, where fantasy and fun
             come to life.
           </a>
-          <p class="caption" id="inline-credit">
+          <p class="caption credit" id="inline-credit">
             image credit: <a href="#">unknown</a>
           </p>
         </figcaption>
