block access if autoplay is not allowed

--- a/index.html
+++ b/index.html
@@ -30,11 +30,16 @@
     />
   </head>
   <body>
+    <h1 id="autoplay-request">
+      You must enable autoplay video and audio to view this webpage.
+    </h1>
     <div id="jumpscare">
       <video id="video">
         <source src="resources/jumpscare.mp4" type="video/mp4" />
       </video>
-      <h1 id="warning" class="creepster-regular">UNSUPPORTED RESOLUTION!</h1>
+      <h1 id="resolution-warning" class="creepster-regular">
+        UNSUPPORTED RESOLUTION!
+      </h1>
     </div>
     <div id="grid-container">
       <div class="margin" id="left-margin"></div>
